Funcionality according to the task and improved style

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <title>Events Homework</title>
 </head>
 <body>
-    <main class="container">
+    <header>
+        <h1>MOVIE FINDER</h1>
+        <p>The best place online for movie lovers</p>
+      </header>
+    <main>
         <form action="">
-            <p>Movie name:</p>
-            <input type="search" name="search" placeholder="Enter name for search">
+            <!-- <p>Movie name:</p> -->
+            <input type="search" name="search" placeholder="Search available movies">
         </form>
-        <section>
+        <div>
+            <section class="container">
 
-        </section>
+            </section>
+        </div>
     </main>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
